--- a/foinse.yaml
+++ b/foinse.yaml
@@ -209,6 +209,8 @@
     - blog
     - dialectal
     - niche
+    - armagh
+    - ulster
 
 - name: Cluain Daimh Gaelach
   url: https://cluaindaimh.blogspot.com/
